# neuburn

./: Cargo.toml  README.md
examples/: mnist_snn.rs
src/: bntt.rs  layers.rs  lib.rs  prelude.rs  slstm.rs  state.rs
src/encoding/: delta.rs  latency.rs  mod.rs  rate.rs
src/event_driven/: full_skan.rs  kan_synapse.rs  mod.rs  spiking_kan_layer.rs
src/functional/: lateral.rs  loss.rs  mod.rs
src/kan/: linear.rs  mod.rs
src/layers/: spiking_conv2d.rs
src/neuron/: alpha.rs  lapicque.rs  leaky.rs  mod.rs  parallel.rs  rleaky.rs  rsynaptic.rs  synaptic.rs
src/surrogate/: atan.rs  fast_sigmoid.rs  mod.rs  sigmoid.rs  straight_through.rs  trait_impl.rs
